<resources>
    <string name="app_name">ReadHub</string>
    <string name="app_introduce">科技新闻，每天三分钟。 </string>

    <string name="menu_setting">设置</string>
    <string name="menu_about">关于</string>
    <string name="topic_detail">话题详情</string>
    <string name="action_share">分享</string>
    <string name="action_search">搜索</string>
    <string name="action_open">在浏览器中打开</string>
    <string name="action_collect">收藏</string>

    <string name="title___site_name">%1$s&#160;&#160;%2$s</string>
    <string name="site_name___author_name___time">%1$s&#160;/&#160;%2$s&#160;&#160;&#160;%3$s</string>
    <string name="site_name___time">%1$s&#160;&#160;&#160;%2$s</string>
    <string name="single__media___report">%1$s&#160;报道</string>
    <string name="multi__media___report">%1$s&#160;等&#160;%2$d&#160;家媒体报道</string>
    <string name="source_format">来源&#160;:&#160;%1$s</string>
    <string name="month__day">%1$d-%2$d</string>
    <string name="month__day__year">%1$d-%2$d\n%3$d</string>
    <string name="use_system_browser">使用系统内置浏览器</string>
    <string name="use_system_browser_des">开启后，将使用系统内置的浏览器打开网页内容</string>
    <string name="change_theme">切换主题</string>
    <string name="readhub_site"><a href="" target="_blank">https://readhub.me</a></string>
    <string name="readhub_source_site"><a href="" target="_blank">https://github.com/guanpj/JReadHub</a></string>
    <string name="text_readhub_source_site">源码地址</string>
    <string name="version">V 1.0.0</string>
    <string name="text_version">版本</string>
    <string name="text_readhub_site">官网</string>
    <string name="readhub_desc">此 app 是由个人基于无码科技（杭州）有限公司的产品 Readhub 开发的非官方 app。</string>
    <string name="text_readhub_desc">简介</string>
    <string name="jump_source">访问原网址</string>
    <string name="new_topic_tips">有&#160;%1$d&#160;个新话题，点击查看</string>
    <string name="brvah_loading">正在加载...</string>
    <string name="brvah_load_failed">加载失败，点击重试</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_empty">暂无数据，点击重试</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
