<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <include layout="@layout/common_toolbar" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.jeez.guanpj.jreadhub.widget.custom.SettingItemView
                android:id="@+id/item_use_system_browser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_setting_browser"
                app:title="@string/use_system_browser"
                app:description="@string/use_system_browser_des"
                app:type="switcher"/>

            <com.jeez.guanpj.jreadhub.widget.custom.SettingItemView
                android:id="@+id/item_auto_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_setting_update"
                app:title="自动检查更新"
                app:description="自动获取更新内容并提示"
                app:type="checkbox"/>

            <com.jeez.guanpj.jreadhub.widget.custom.SettingItemView
                android:id="@+id/item_switch_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_setting_theme"
                app:title="@string/change_theme"
                app:type="none"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
